Refactor tests to use getFirst() instead of get(0) for moves
Updated test assertions in GameServiceImplTest to replace get(0) with getFirst(), improving clarity and aligning with the intended use of the data structure. This ensures consistency and better readability of the tests.